# typybench

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run.py
scripts/: evaluation.py
src/typybench/: helpers.py  repo_similarity.py  type_similarity.py
src/typybench/cli/: analyze_repo.py  compare_repo.py
